bad/sub_invalid_types_string_int.example_compiler_output
ERROR
[1mbad/sub_invalid_types_string_int.lat:3:5: [1;31merror: [0;1msubtraction is defined only for int values, not `string` and `int`[m
	"" - (-1);
	   [1;32m^[m
